k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudforge
spec:
  replicas: 8
  selector:
    matchLabels:
      app: cloudforge
  template:
    metadata:
      labels:
        app: cloudforge
    spec:
      containers:
      - name: cloudforge
        image: sharath2003/cloudforge:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
