k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudforge-service
spec:
  selector:
    app: cloudforge
  ports:
  - port: 80
    targetPort: 5000
  type: NodePort
